--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,47 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100vw;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.addTaskDiv {
+  height: 30vh;
+  background-color: darkblue;
+  width: 100%;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+}
+
+.listDiv {
+  height: auto;
+  width: 100%;
+  background-color: aqua;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 50px;
+}
+
+.task {
+  width: 500px;
+  height: 50px;
+  margin: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.task button {
+  width: auto;
+  height: 20px;
+  text-align: center;
+  margin-left: 5px;
 }
