--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: rgb(165, 165, 121);
 }
 
 .App {
@@ -13,7 +14,7 @@ body {
 
 .addTaskDiv {
   height: 30vh;
-  background-color: darkblue;
+  background-color: rgb(45, 45, 69);
   width: 100%;
   display: flex;
   justify-content: center;
@@ -23,7 +24,7 @@ body {
 .listDiv {
   height: auto;
   width: 100%;
-  background-color: aqua;
+  background-color: rgb(48, 96, 96);
   display: flex;
   flex-direction: column;
   align-items: center;
