--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,23 @@ body {
   align-items: center;
 }
 
+.addTaskDiv input {
+  font-size: 24px;
+  border-radius: 5px;
+  padding: 10px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.addTaskDiv button {
+  font-size: 24px;
+  margin-left: 15px;
+  border-radius: 5px;
+  padding: 10px 15px;
+  background-color: grey;
+  color: whitesmoke;
+}
+
 .listDiv {
   height: auto;
   width: 100%;
@@ -32,7 +49,7 @@ body {
 }
 
 .task {
-  width: 500px;
+  width: 70%;
   height: 50px;
   margin: 15px;
   display: flex;
@@ -44,5 +61,5 @@ body {
   width: auto;
   height: 20px;
   text-align: center;
-  margin-left: 5px;
+  margin-left: 15px;
 }
